fix: Added the fixes asked to be implemented, by Coderabbitai